--- a/AdoptMe2/app/src/main/res/drawable/divider_sample.xml
+++ b/AdoptMe2/app/src/main/res/drawable/divider_sample.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="true" />
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <size android:height="5dp" />
+    <solid android:color="#dcd7d5" />
+</shape>
