--- a/AdoptMe2/app/src/main/res/layout/activity_crea.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_crea.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/relativeLayout3">
+            android:layout_below="@+id/relativeLayout3"
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:id="@+id/email"
@@ -125,7 +126,7 @@
             <ImageView
                 android:id="@+id/c_edit_image"
                 android:layout_width="match_parent"
-                android:layout_height="800px"
+                android:layout_height="350dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
