--- a/AdoptMe2/app/src/main/res/layout/activity_crea.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_crea.xml
@@ -131,7 +131,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:adjustViewBounds="false"
-                app:srcCompat="@android:drawable/ic_menu_report_image" />
+                app:srcCompat="@drawable/camera_icon" />
 
             <TextView
                 android:id="@+id/sexe"
