--- a/AdoptMe2/app/src/main/res/layout/anunci.xml
+++ b/AdoptMe2/app/src/main/res/layout/anunci.xml
@@ -100,11 +100,11 @@
 
         <CheckBox
             android:id="@+id/chk_anunci"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
+            android:layout_alignTop="@+id/btn_info"
             android:layout_marginEnd="23dp"
             android:layout_marginRight="23dp"
             android:button="@drawable/save_selector"
