--- a/AdoptMe2/app/src/main/res/layout/activity_crea.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_crea.xml
@@ -131,7 +131,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:adjustViewBounds="false"
-                app:srcCompat="@drawable/camera_icon" />
+                android:background="@android:color/holo_blue_bright"
+                app:srcCompat="@drawable/boto_cam" />
 
             <TextView
                 android:id="@+id/sexe"
