--- a/AdoptMe2/app/src/main/res/values/colors.xml
+++ b/AdoptMe2/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#909add</color>
-    <color name="colorAccent">#909add</color>
+    <color name="colorPrimaryDark">#7d9ce9</color>
+    <color name="colorAccent">#96e5f4</color>
 </resources>
