Disseny first time

--- a/AdoptMe2/app/src/main/res/layout/activity_first_time.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_first_time.xml
@@ -4,18 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="barcons.pol.adoptme.FirstTimeActivity">
+    tools:context="barcons.pol.adoptme.FirstTimeActivity"
+    android:background="@drawable/background">
 
-    <TextView
-        android:id="@+id/titol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="@string/adoptme"
-        android:textColor="@android:color/background_dark"
-        android:textSize="52sp" />
 
     <TextView
         android:id="@+id/info_nom"
@@ -23,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/info_cognom"
         android:layout_alignStart="@+id/info_cognom"
-        android:layout_below="@+id/titol"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="180dp"
         android:text="@string/nom"
         android:textColor="@android:color/background_dark"
         android:textSize="22sp" />
